Resolución violaciones críticas SONAR